long ass update

--- a/templates/starter/locales/da.toml
+++ b/templates/starter/locales/da.toml
@@ -3,3 +3,6 @@ authors_label = "Forfattere"
 affiliation_label = "Institution"
 toc_label = "Indholdsfortegnelse"
 index_label = "Indeks"
+take_home_label = "Take-home"
+tags_label = "Tags"
+tag_index_label = "Tagindeks"
