--- a/templates/starter/locales/en.toml
+++ b/templates/starter/locales/en.toml
@@ -3,3 +3,6 @@ authors_label = "Authors"
 affiliation_label = "Affiliation"
 toc_label = "Table of contents"
 index_label = "Index"
+take_home_label = "Take-home"
+tags_label = "Tags"
+tag_index_label = "Tag index"
