most things are done now

--- a/templates/starter/locales/da.toml
+++ b/templates/starter/locales/da.toml
@@ -4,5 +4,10 @@ affiliation_label = "Institution"
 toc_label = "Indholdsfortegnelse"
 index_label = "Indeks"
 take_home_label = "Take-home"
-tags_label = "Tags"
-tag_index_label = "Tagindeks"
+tags_label = "Nøgleord"
+tag_index_label = "Nøgleordsindeks"
+cover_header = "Tværprofessionelt uddannelsessymposium 2026"
+cover_title = "ABSTRACTBOG"
+cover_symposium = "Tværprofessionelt Uddannelsessymposium"
+cover_date = "13. marts 2026"
+cover_subtitle = "Intelligens' betydning for læring og vejledning"
