--- a/templates/starter/locales/en.toml
+++ b/templates/starter/locales/en.toml
@@ -6,3 +6,8 @@ index_label = "Index"
 take_home_label = "Take-home"
 tags_label = "Tags"
 tag_index_label = "Tag index"
+cover_header = "Interprofessional education symposium 2026"
+cover_title = "PROGRAM"
+cover_symposium = "Interprofessional Education Symposium"
+cover_date = "13 March 2026"
+cover_subtitle = "The impact of intelligence on learning and guidance"
